{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player Movement",
            "id": "80432624-c04f-4b6b-98d7-f6f5dafe8513",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "04c49e52-bf5e-4608-9a2d-c602d4ef6f86",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Camera",
                    "type": "PassThrough",
                    "id": "a9b2444b-757e-4440-a66c-5c06a7f76025",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "StrongAttack",
                    "type": "Button",
                    "id": "83a49382-e278-49b9-b72f-105b6bdbdca6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WirlAttack",
                    "type": "Button",
                    "id": "3b0f31ec-93a6-4285-b251-2098775d1960",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Block",
                    "type": "Button",
                    "id": "d3b39b4b-ae17-46b2-a8fc-37c7ee0f22a8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "9158a33a-d000-4e84-bc1f-a0edd8dd404b",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "ff13d541-8bc0-4ece-8bfa-c8386f715169",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "ab2a3b15-86bf-4455-a54e-8ab241cc5db1",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "fa6a534d-807d-4261-aaa9-146afde3e0d4",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "b901dff3-422e-43b9-b7e7-14318a1dd645",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "e5382f8e-4705-4969-8a6f-b6a61a4a9b74",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dfc36e16-540a-4e74-8892-2e5d72f09293",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "StrongAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fa8fcf67-b7f0-4018-acfe-0ebf8382382d",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WirlAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "433a37d9-50db-4b57-a313-4a24fefa666c",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Block",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}